# python-clean-architecture

./: .gitignore  requirements_dev.txt  setup.cfg
src/clean_architecture/: factories.py  interfaces.py
src/clean_architecture/bases/abstract/: bases.py
src/clean_architecture/bases/concrete/: sqlalchemy_repo_base.py
