[metadata]
name = python_clean_architecture
version = 0.1.1
author = Viktor Zhemchuzhnikov
author_email = v.zhemchuzhnikov@gmail.com
summary = Provides a framework for enforcing Clean Architecture pattern in python projects.

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    pydantic>=1.8.1

[options.extras_require]
sqlalchemy =
    SQLAlchemy>=1.4.9
    sqlalchemy-filters>=0.12.0

[options.packages.find]
where = src

[build-system]
requires = ["setuptools", "wheel"]